--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: windows-latest
 
 steps:
 - script: echo Hello, world!
@@ -18,10 +18,9 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
-#- task: RunOracleScripts@1
-#  inputs:
-#    scriptPath: '$(System.DefaultWorkingDirectory)'
-#    user: 'Admin'
-#    password: 'XhIS9Dm89P238!"#$'
-#    databaseName: 'ALUMNOS'
-
+- task: RunOracleScripts@1
+  inputs:
+    scriptPath: '$(System.DefaultWorkingDirectory)'
+    user: 'ADMIN'
+    password: 'Pruebas98230'
+    databaseName: 'prueba'
