--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,4 +23,4 @@ steps:
     scriptPath: '$(System.DefaultWorkingDirectory)'
     user: 'ADMIN'
     password: 'Pruebas98230'
-    databaseName: 'prueba'
+    databaseName: 'aloaia'
